--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "crypto-js": "^3.1.9-1",
         "dotenv": "^16.0.0",
         "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
         "react-cookie": "^4.0.3",
         "react-dom": "^17.0.2",
