--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "crypto-browserify": "^3.12.0",
         "crypto-js": "^3.1.9-1",
         "dotenv": "^16.0.0",
+        "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
@@ -44,7 +45,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "node ./src/server",
         "build": "react-scripts build",
         "postinstall": "node patch.js",
         "test": "react-scripts test",
