--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "node ./src/server",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "postinstall": "node patch.js",
         "test": "react-scripts test",
