--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "^2.1.3",
         "react-toastify": "^9.0.3",
+        "serve": "^13.0.2",
         "stream-browserify": "^3.0.0",
         "styled-components": "^5.3.3",
         "typescript": "^4.6.2",
@@ -45,7 +46,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "serve -s start",
         "build": "react-scripts build",
         "postinstall": "node patch.js",
         "test": "react-scripts test",
