--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "serve -s start",
+        "start": "serve -s build",
+        "dev": "react-scripts start",
         "build": "react-scripts build",
         "postinstall": "node patch.js",
         "test": "react-scripts test",
